# aivault

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  package.json
.github/workflows/: ci.yml  release.yml
docs/: docs.json  getting-started.md  index.mdx  install.md  linux-servers.md  macos.md
docs/cli/: capabilities.md  credentials.md  index.md  invoke.md  oauth.md  providers.md  secrets.md  vault-lifecycle.md
docs/core/: architecture.md  auth-strategies.md  broker.md  index.md  registry.md  scopes-and-isolation.md  security-model.md  vault.md
docs/ops/: daemon.md  environment.md  index.md  storage.md  testing.md
docs/providers/: index.md  postgres.md
docs/registry/: custom-providers.md  index.md  schema.md
docs/security/: audit-log.md  encryption.md  index.md  threat-model.md
prds/: agent-vault.prd.md  aivault.prd.md  daemon-isolation.prd.md  postgres-file-session-capabilities.prd.md  provider-plugins.prd.md  provider-sessions.prd.md  release-checklist.prd.md  services-to-support.prd.md
prds/user-stories/: auth-strategies.json  capabilities.json  conformance.json  groups.json  how-to.md  proxy-envelope.json  registry-services.json  registry.json  security-policy.json  tokens.json  transport.json  vault.json
providers/postgres/: Cargo.toml
providers/postgres/src/: main.rs
registry/: airtable.json  anthropic.json  calendly.json  deepgram.json  deepl.json  discord.json  elevenlabs.json  fal.json  firecrawl.json  gemini.json  github.json  google-calendar.json  google-gmail.json  google-places.json  how-to.md  hubspot.json  intercom.json  linear.json  mailgun.json  netlify.json  notion.json  openai.json  openrouter.json  plaid.json  postmark.json  quickbooks.json  reddit.json  remove-bg.json  replicate.json  resend.json  sendgrid.json  shopify.json  slack.json  spotify.json  square.json  stripe.json  telegram.json  todoist.json  trello.json  tripo.json  (+5 more)
registry/schemas/: registry-provider.schema.json
scripts/: evidence-computed.js  install-local.sh  release-cli.js  stories.js  sync-skills.js  validate-registry.js
skills/aivault/: SKILL.md
skills/aivault/references/: cli-reference.md  getting-started.md  operations.md  provider-plugins.md  registry-custom-providers.md  security-and-isolation.md
src/: app.rs  broker.rs  broker_store.rs  capabilities.rs  cli.rs  daemon.rs  display.rs  lib.rs  log_retention.rs  main.rs  markdown.rs  paths.rs  plaid_capabilities.rs  postgres_capabilities.rs  provider_plugins.rs  registry.rs  test_support.rs
src/broker/: helpers.rs  runtime.rs  tests.rs
src/migrations/: mod.rs  pinned_secrets_aad_v2.rs
src/vault/: audit.rs  crypto.rs  mod.rs  paths.rs  refs.rs  store.rs
tests/: e2e_cli_invoke.rs  e2e_cli_local.rs  e2e_cli_local_tls.rs  e2e_daemon.rs  e2e_postgres.rs  release_signing_contract.rs
tests/fixtures/postgres/: README.md  Tiltfile  docker-compose.yml
tests/fixtures/postgres/init/: 001-init.sql
