[package]
name = "aivault"
version = "0.1.0"
edition = "2021"
description = "Standalone CLI for local vault lifecycle and secret management"
license = "MIT"

[[bin]]
name = "aivault"
path = "src/main.rs"

[dependencies]
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
hex = "0.4"
keyring = "3.6"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zeroize = "1"

[dev-dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rcgen = "0.13"
rustls = "0.23"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
